Se adiciona clasificación tramites

--- a/AtencionTramites.Web/AtencionTramites.Web.csproj
+++ b/AtencionTramites.Web/AtencionTramites.Web.csproj
@@ -647,7 +647,7 @@
     <Content Include="Scripts\summernote\font\summernote.eot" />
     <None Include="Scripts\UltimusFramework.intellisense.js" />
     <Content Include="Scripts\vfs_fonts.js" />
-    <Content Include="Ultimus.Framework\ClasificacionTramites\API.Radicado.js" />
+    <Content Include="Ultimus.Framework\ClasificacionTramites\API.ClasificacionTramite.js" />
     <Content Include="Ultimus.Framework\ClasificacionTramites\API.Seguimiento.js" />
     <Content Include="Ultimus.Framework\AtencionTramitesAse\API.Seguimiento.js" />
     <Content Include="Ultimus.Framework\AtencionTramitesAse\API.Radicado.js" />
@@ -678,6 +678,7 @@
     <Content Include="Views\AtencionTramiteAse\Seguimiento.cshtml" />
     <Content Include="Views\ClasificacionTramites\Radicado.cshtml" />
     <Content Include="Views\ClasificacionTramites\Seguimiento.cshtml" />
+    <Content Include="Views\ClasificacionTramites\ClasificacionTramite.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
