--- a/AtencionTramites.WCF/AtencionTramites.WCF.csproj
+++ b/AtencionTramites.WCF/AtencionTramites.WCF.csproj
@@ -440,7 +440,6 @@
     <Content Include="Scripts\vfs_fonts.js" />
     <None Include="Service References\WCFDocumentos\WCFDocumentos1.disco" />
     <Content Include="Catalogos.svc" />
-    <Content Include="DatosFormularios.svc" />
     <Content Include="Web.config" />
     <None Include="Service References\WCFDocumentos\WCFDocumentos2.wsdl" />
     <None Include="Service References\WCFDocumentos\WCFDocumentos21.wsdl" />
@@ -478,7 +477,6 @@
     <Compile Include="IAtencionTramiteSol.cs" />
     <Compile Include="IClasificacionTramites.cs" />
     <Compile Include="ICatalogos.cs" />
-    <Compile Include="IDatosFormularios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\WCFDocumentos\Reference.cs">
       <AutoGen>True</AutoGen>
@@ -488,9 +486,7 @@
     <Compile Include="Catalogos.svc.cs">
       <DependentUpon>Catalogos.svc</DependentUpon>
     </Compile>
-    <Compile Include="DatosFormularios.svc.cs">
-      <DependentUpon>DatosFormularios.svc</DependentUpon>
-    </Compile>
+    <Compile Include="WebApiConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
