--- a/AtencionTramites.WCF/Web.config
+++ b/AtencionTramites.WCF/Web.config
@@ -1,16 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <sectionGroup name="system.web.webPages.razor" type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
-      <section name="host" type="System.Web.WebPages.Razor.Configuration.HostSection, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
-      <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
-    </sectionGroup>
-  </configSections>
-  <appSettings>
-    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
-  </appSettings>
-  <!--
+	<configSections>
+		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+		<sectionGroup name="system.web.webPages.razor" type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
+			<section name="host" type="System.Web.WebPages.Razor.Configuration.HostSection, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
+			<section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
+		</sectionGroup>
+	</configSections>
+	<appSettings>
+		<add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+		<add key="ULA.RegeditKey" value="AtencionTramites" />
+	</appSettings>
+	<!--
     Para obtener una descripción de los cambios de web.config, vea http://go.microsoft.com/fwlink/?LinkId=235367.
 
     Los siguientes atributos se pueden establecer en la etiqueta <httpRuntime>.
@@ -18,121 +19,158 @@
         <httpRuntime targetFramework="4.8" />
       </system.Web>
   -->
-  <system.web>
-    <globalization culture="es-PA" uiCulture="es-PA" />
-    <compilation debug="true" targetFramework="4.8" />
-    <httpRuntime targetFramework="4.5" />
-  </system.web>
-  <system.serviceModel>
-    <client>
-      <endpoint address="http://localhost/WCFDocumentos/WCFDocumentos.svc/soap" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IWCFDocumentos" contract="WCFDocumentos.IWCFDocumentos" name="WSHttpBinding_IWCFDocumentos" />
-    </client>
-    <behaviors>
-      <serviceBehaviors>
-        <behavior>
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-          <serviceDebug includeExceptionDetailInFaults="true" />
-        </behavior>
-      </serviceBehaviors>
-      <endpointBehaviors>
-        <behavior name="SOAPBehavior" />
-        <behavior name="JSONBehavior">
-          <webHttp />
-          <enableWebScript />
-          <!--<newtonsoftJsonBehavior />-->
-        </behavior>
-      </endpointBehaviors>
-    </behaviors> 
-    <protocolMapping>
-      <add binding="basicHttpsBinding" scheme="https" />
-    </protocolMapping>
-    <bindings>
-      <basicHttpBinding>
-        <binding name="BasicHttpBinding_IService1" />
-      </basicHttpBinding>
-      <wsHttpBinding>
-        <binding name="SOAPBinding" closeTimeout="00:50:00" openTimeout="00:50:00" receiveTimeout="00:50:00" sendTimeout="00:50:00" bypassProxyOnLocal="false" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" useDefaultWebProxy="false" allowCookies="false">
-          <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647" maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
-          <security mode="None">
-            <transport clientCredentialType="None" />
-          </security>
-        </binding>
-        <binding name="WSHttpBinding_IWCFDocumentos">
-          <security mode="None" />
-        </binding>
-      </wsHttpBinding>
-      <webHttpBinding>
-        <binding name="JSONBinding" closeTimeout="00:50:00" openTimeout="00:50:00" receiveTimeout="00:50:00" sendTimeout="00:50:00" allowCookies="false" bypassProxyOnLocal="false" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" useDefaultWebProxy="true" contentTypeMapper="NewtonsoftJsonContentTypeMapper,Ultimus.Utilitarios">
-          <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647" maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
-          <security mode="None">
-            <transport clientCredentialType="None" />
-          </security>
-        </binding>
-      </webHttpBinding>
-    </bindings>
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
-    <services>
-      <service name="AtencionTramites.WCF.Catalogos">
-        <endpoint address="soap" behaviorConfiguration="SOAPBehavior" binding="wsHttpBinding" bindingConfiguration="SOAPBinding" contract="AtencionTramites.WCF.ICatalogos" />
-        <endpoint address="api" behaviorConfiguration="JSONBehavior" binding="webHttpBinding" bindingConfiguration="JSONBinding" contract="AtencionTramites.WCF.ICatalogos" />
-      </service>
-      <service name="AtencionTramites.WCF.DatosFormularios">
-        <endpoint address="soap" behaviorConfiguration="SOAPBehavior" binding="wsHttpBinding" bindingConfiguration="SOAPBinding" contract="AtencionTramites.WCF.IDatosFormularios" />
-        <endpoint address="api" behaviorConfiguration="JSONBehavior" binding="webHttpBinding" bindingConfiguration="JSONBinding" contract="AtencionTramites.WCF.IDatosFormularios" />
-      </service>
-    </services>
-    <extensions>
-      <behaviorExtensions>
-        <add name="newtonsoftJsonBehavior" type="NewtonsoftJsonBehaviorExtension,Ultimus.Utilitarios" />
-      </behaviorExtensions>
-    </extensions>
-  </system.serviceModel>
-  <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true" />
-    <directoryBrowse enabled="true" />
-    <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
-      <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
-  </system.webServer>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="mssqllocaldb" />
-      </parameters>
-    </defaultConnectionFactory>
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
-  </entityFramework>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31BF3856AD364E35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.6.0" newVersion="5.2.6.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.6.0" newVersion="5.2.6.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.6.0" newVersion="5.2.6.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
-  <system.web.webPages.razor>
-    <pages pageBaseType="System.Web.Mvc.WebViewPage">
-      <namespaces>
-        <add namespace=" Ultimus.Utilitarios" />
-        <add namespace="Ultimus.Framework" />
-      </namespaces>
-    </pages>
-  </system.web.webPages.razor>
+	<system.web>
+		<globalization culture="es-PA" uiCulture="es-PA" />
+		<compilation debug="true" targetFramework="4.8" />
+		<httpRuntime targetFramework="4.5" />
+	</system.web>
+	<system.serviceModel>
+		<client>
+			<endpoint address="http://localhost/WCFDocumentos/WCFDocumentos.svc/soap" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IWCFDocumentos" contract="WCFDocumentos.IWCFDocumentos" name="WSHttpBinding_IWCFDocumentos" />
+		</client>
+		<behaviors>
+			<serviceBehaviors>
+				<behavior>
+					<serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+					<serviceDebug includeExceptionDetailInFaults="true" />
+				</behavior>
+			</serviceBehaviors>
+			<endpointBehaviors>
+				<behavior name="SOAPBehavior" />
+				<behavior name="JSONBehavior">
+					<webHttp />
+					<enableWebScript />
+					<!--<newtonsoftJsonBehavior />-->
+				</behavior>
+			</endpointBehaviors>
+		</behaviors>
+		<bindings>
+			<basicHttpBinding>
+				<binding name="BasicHttpBinding_IService1" />
+			</basicHttpBinding>
+			<wsHttpBinding>
+				<binding name="SOAPBinding" closeTimeout="00:50:00" openTimeout="00:50:00" receiveTimeout="00:50:00" sendTimeout="00:50:00" bypassProxyOnLocal="false" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" useDefaultWebProxy="false" allowCookies="false">
+					<security mode="None">
+						<transport clientCredentialType="None" />
+					</security>
+				</binding>
+				<binding name="SOAPBindingHttps" closeTimeout="00:50:00" openTimeout="00:50:00" receiveTimeout="00:50:00" sendTimeout="00:50:00" bypassProxyOnLocal="false" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" useDefaultWebProxy="false" allowCookies="false">
+					<security mode="Transport">
+						<transport clientCredentialType="None" />
+					</security>
+				</binding>
+			</wsHttpBinding>
+			<webHttpBinding>
+				<binding name="JSONBinding" closeTimeout="00:50:00" openTimeout="00:50:00" receiveTimeout="00:50:00" sendTimeout="00:50:00" allowCookies="false" bypassProxyOnLocal="false" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" useDefaultWebProxy="true" contentTypeMapper="NewtonsoftJsonContentTypeMapper,Ultimus.Utilitarios">
+					<readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647" maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
+					<security mode="None">
+						<transport clientCredentialType="None" />
+					</security>
+				</binding>
+				<binding name="JSONBindingHttps" closeTimeout="00:50:00" openTimeout="00:50:00" receiveTimeout="00:50:00" sendTimeout="00:50:00" allowCookies="false" bypassProxyOnLocal="false" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" useDefaultWebProxy="true" contentTypeMapper="NewtonsoftJsonContentTypeMapper,Ultimus.Utilitarios">
+					<readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647" maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
+					<security mode="Transport">
+						<transport clientCredentialType="None" />
+					</security>
+				</binding>
+			</webHttpBinding>
+		</bindings>
+		<serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+		<services>
+			<service name="AtencionTramites.WCF.Catalogos">
+				<endpoint address="soap" behaviorConfiguration="SOAPBehavior" binding="wsHttpBinding" bindingConfiguration="SOAPBinding" contract="AtencionTramites.WCF.ICatalogos" />
+				<endpoint address="soap" behaviorConfiguration="SOAPBehavior" binding="wsHttpBinding" bindingConfiguration="SOAPBindingHttps" contract="AtencionTramites.WCF.ICatalogos" />
+				<endpoint address="api" behaviorConfiguration="JSONBehavior" binding="webHttpBinding" bindingConfiguration="JSONBinding" contract="AtencionTramites.WCF.ICatalogos" />
+				<endpoint address="api" behaviorConfiguration="JSONBehavior" binding="webHttpBinding" bindingConfiguration="JSONBindingHttps" contract="AtencionTramites.WCF.ICatalogos" />
+				<endpoint address="mex" binding="mexHttpsBinding" contract="IMetadataExchange" />
+			</service>
+			<service name="AtencionTramites.WCF.ClasificacionTramites">
+				<endpoint address="soap" behaviorConfiguration="SOAPBehavior" binding="wsHttpBinding" bindingConfiguration="SOAPBinding" contract="AtencionTramites.WCF.IClasificacionTramites" />
+				<endpoint address="soap" behaviorConfiguration="SOAPBehavior" binding="wsHttpBinding" bindingConfiguration="SOAPBindingHttps" contract="AtencionTramites.WCF.IClasificacionTramites" />
+				<endpoint address="api" behaviorConfiguration="JSONBehavior" binding="webHttpBinding" bindingConfiguration="JSONBinding" contract="AtencionTramites.WCF.IClasificacionTramites" />
+				<endpoint address="api" behaviorConfiguration="JSONBehavior" binding="webHttpBinding" bindingConfiguration="JSONBindingHttps" contract="AtencionTramites.WCF.IClasificacionTramites" />
+				<endpoint address="mex" binding="mexHttpsBinding" contract="IMetadataExchange" />
+			</service>
+			<service name="AtencionTramites.WCF.AtencionTramiteAse">
+				<endpoint address="soap" behaviorConfiguration="SOAPBehavior" binding="wsHttpBinding" bindingConfiguration="SOAPBinding" contract="AtencionTramites.WCF.IAtencionTramiteAse" />
+				<endpoint address="soap" behaviorConfiguration="SOAPBehavior" binding="wsHttpBinding" bindingConfiguration="SOAPBindingHttps" contract="AtencionTramites.WCF.IAtencionTramiteAse" />
+				<endpoint address="api" behaviorConfiguration="JSONBehavior" binding="webHttpBinding" bindingConfiguration="JSONBinding" contract="AtencionTramites.WCF.IAtencionTramiteAse" />
+				<endpoint address="api" behaviorConfiguration="JSONBehavior" binding="webHttpBinding" bindingConfiguration="JSONBindingHttps" contract="AtencionTramites.WCF.IAtencionTramiteAse" />
+				<endpoint address="mex" binding="mexHttpsBinding" contract="IMetadataExchange" />
+			</service>
+			<service name="AtencionTramites.WCF.AtencionTramiteQue">
+				<endpoint address="soap" behaviorConfiguration="SOAPBehavior" binding="wsHttpBinding" bindingConfiguration="SOAPBinding" contract="AtencionTramites.WCF.IAtencionTramiteQue" />
+				<endpoint address="soap" behaviorConfiguration="SOAPBehavior" binding="wsHttpBinding" bindingConfiguration="SOAPBindingHttps" contract="AtencionTramites.WCF.IAtencionTramiteQue" />
+				<endpoint address="api" behaviorConfiguration="JSONBehavior" binding="webHttpBinding" bindingConfiguration="JSONBinding" contract="AtencionTramites.WCF.IAtencionTramiteQue" />
+				<endpoint address="api" behaviorConfiguration="JSONBehavior" binding="webHttpBinding" bindingConfiguration="JSONBindingHttps" contract="AtencionTramites.WCF.IAtencionTramiteQue" />
+				<endpoint address="mex" binding="mexHttpsBinding" contract="IMetadataExchange" />
+			</service>
+			<service name="AtencionTramites.WCF.AtencionTramiteSol">
+				<endpoint address="soap" behaviorConfiguration="SOAPBehavior" binding="wsHttpBinding" bindingConfiguration="SOAPBinding" contract="AtencionTramites.WCF.IAtencionTramiteSol" />
+				<endpoint address="soap" behaviorConfiguration="SOAPBehavior" binding="wsHttpBinding" bindingConfiguration="SOAPBindingHttps" contract="AtencionTramites.WCF.IAtencionTramiteSol" />
+				<endpoint address="api" behaviorConfiguration="JSONBehavior" binding="webHttpBinding" bindingConfiguration="JSONBinding" contract="AtencionTramites.WCF.IAtencionTramiteSol" />
+				<endpoint address="api" behaviorConfiguration="JSONBehavior" binding="webHttpBinding" bindingConfiguration="JSONBindingHttps" contract="AtencionTramites.WCF.IAtencionTramiteSol" />
+				<endpoint address="mex" binding="mexHttpsBinding" contract="IMetadataExchange" />
+			</service>
+		</services>
+		<protocolMapping>
+			<add binding="webHttpBinding" scheme="http" bindingConfiguration="JSONBinding" />
+			<add binding="webHttpBinding" scheme="https" bindingConfiguration="JSONBindingHttps" />
+			<add binding="wsHttpBinding" scheme="http" bindingConfiguration="SOAPBinding" />
+			<add binding="wsHttpBinding" scheme="https" bindingConfiguration="SOAPBindingHttps" />
+		</protocolMapping>
+		<extensions>
+			<behaviorExtensions>
+				<add name="newtonsoftJsonBehavior" type="NewtonsoftJsonBehaviorExtension,Ultimus.Utilitarios" />
+			</behaviorExtensions>
+		</extensions>
+	</system.serviceModel>
+	<system.webServer>
+		<modules runAllManagedModulesForAllRequests="true" />
+		<directoryBrowse enabled="true" />
+		<handlers>
+			<remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+			<remove name="OPTIONSVerbHandler" />
+			<remove name="TRACEVerbHandler" />
+			<add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+		</handlers>
+	</system.webServer>
+	<entityFramework>
+		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+			<parameters>
+				<parameter value="mssqllocaldb" />
+			</parameters>
+		</defaultConnectionFactory>
+		<providers>
+			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+		</providers>
+	</entityFramework>
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31BF3856AD364E35" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-5.2.6.0" newVersion="5.2.6.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-5.2.6.0" newVersion="5.2.6.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-5.2.6.0" newVersion="5.2.6.0" />
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
+	<system.web.webPages.razor>
+		<pages pageBaseType="System.Web.Mvc.WebViewPage">
+			<namespaces>
+				<add namespace=" Ultimus.Utilitarios" />
+				<add namespace="Ultimus.Framework" />
+			</namespaces>
+		</pages>
+	</system.web.webPages.razor>
 </configuration>
