--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,9 @@
 mono_crash.*
 
 # Build results
-#[Dd]ebug/
+[Dd]ebug/
 #[Dd]ebugPublic/
-#[Rr]elease/
+[Rr]elease/
 #[Rr]eleases/
 x64/
 x86/
@@ -27,11 +27,11 @@ x86/
 [Aa][Rr][Mm]/
 [Aa][Rr][Mm]64/
 bld/
-#[Bb]in/
-#[Oo]bj/
-#[Oo]ut/
-#[Ll]og/
-#[Ll]ogs/
+[Bb]in/
+[Oo]bj/
+[Oo]ut/
+[Ll]og/
+[Ll]ogs/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
@@ -184,7 +184,7 @@ DocProject/Help/html
 *.azurePubxml
 # Note: Comment the next line if you want to checkin your web deploy settings,
 # but database connection strings (with potential passwords) will be unencrypted
-#*.pubxml
+*.pubxml
 #*.publishproj
 
 # Microsoft Azure Web App publish settings. Comment the next line if you want to
